tests/baselines/reference/tsxAttributeResolution4.errors.txt
file.tsx(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
file.tsx(15,26): error TS2339: Property 'len' does not exist on type 'string'.


==== file.tsx (2 errors) ====
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	interface Element { }
    	interface IntrinsicElements {
    		test1: Attribs1;
    	}
    }
    interface Attribs1 {
    	x(n: string): void;
    }
    
    // OK
    <test1 {... {x: (n) => 0} } />;
    
    // Error, no member 'len' on 'string'
    <test1 {... {x: (n) => n.len} } />;
                             ~~~
!!! error TS2339: Property 'len' does not exist on type 'string'.
    